# kotlin-native

./: .gitignore
build-tools/src/main/kotlin/org/jetbrains/kotlin/: ExecutorService.kt
konan/: konan.properties
runtime/: CMakeLists.txt
runtime/src/main/cpp/: Alignment.hpp  HeterogeneousMultiSourceQueue.hpp  TypeInfo.h
runtime/src/mm/cpp/: Alignment.hpp  Allocator.cpp  Allocator.hpp  GlobalData.hpp  HeapObject.cpp  HeapObject.hpp  Memory.cpp  ObjectInfo.hpp  Stubs.cpp  ThreadData.hpp  ThreadState.cpp  ThreadState.hpp  ThreadStateTest.cpp
tools/toolchain_builder/: run_container.sh
